--- a/src/app/signup-form/signup-form.component.html
+++ b/src/app/signup-form/signup-form.component.html
@@ -2,7 +2,14 @@
     <div class="form-group">
         <label for="username">Username</label>
         <input formControlName="username" id="username" type="text" class="form-control">
-        <div *ngIf="username.touched && username.invalid" class="alert alert-danger">Username is required.</div>
+        <div *ngIf="username.touched && username.invalid" class="alert alert-danger">
+            <div *ngIf="username.errors.required">Username is required.</div>
+            <div *ngIf="username.errors.minlength">Username requires at least
+                {{ username.errors.minlength.requiredLength }}
+                characters.</div>
+            <div *ngIf="username.errors.cannotContainSpace">Username cannot contain space.</div>
+            <div *ngIf="username.errors.shouldBeUnique">Username should be unique.</div>
+        </div>
     </div>
     <div class="form-group">
         <label for="password">Password</label>
